* 4.3.0
- Added HTTP client metric that measures the response duration (time until response content reading is finished).
- Added "client" label containing the name of HTTP client to HTTP client metrics.
- HTTP client metrics are now published via the netstandard package, without requiring ASP.NET Core. #314
* 4.2.0
- Added Histogram.PowersOfTenDividedBuckets()
- Improved accuracy of histogram bucket calculations to reduce the likelyhood of seeing 0.00000000000000000001 offsets from expected value due to floating point math.
- Added ConfigureAwait(false) to MetricHandler to help avoid deadlocks in some rare scenarios. #308
- Fix defect where MetricPusher terminated when HttpClient signaled timeout. #302, #293
- No longer need to manually reference ASP.NET Core SDK in csproj file when installing prometheus-net.AspNetCore library. It gets automatically referenced now. #267
* 4.1.1
- Bugfix: HTTP request metrics in 4.1.0 got broken due to typo in middleware helper.
* 4.1.0
- Fixed HttpClient metrics duration that was incorrectly measured. #265
- prometheus-net.NetFramework.AspNet is now strong named, just like all the other assemblies. #273
- NetFx target is now conditional for Windows builds only, to allow easier development work on nonwindows platforms. #264
- MetricPusher now supports a callback for logging push errors. #186
- Added support for defining static labels on registry or metric level. #256
- Added ICollectorRegistry and IMetricFactory for mocking in test code. #268
- Ignore /metrics URL by default in HTTP request metrics.
- Fix overflow in Summary after observing more than uint.MaxValue events. #277
- Reduce allocations in hot paths. #276, #275
- Added request filtering (authorization) support to standalone MetricServer. #261
* 4.0.0
- Allow arbitrary ASP.NET Core route parameters to be exposed as HTTP metric labels. #225